developed navbar and styling further

--- a/src/scss/1-global/_variables.scss
+++ b/src/scss/1-global/_variables.scss
@@ -1,7 +1,9 @@
 // Dimensions
 
 $cornerRadiusStandard: 0.3125rem;
-
+$standardPaddingX: 4rem;
+$standardPaddingY: 1rem;
+$standardPadding: 2rem;
 
 // Colors
 
