--- a/src/scss/4-components/_table.scss
+++ b/src/scss/4-components/_table.scss
@@ -9,24 +9,49 @@
     
     border-radius: g.$cornerRadiusStandard;
     width: 90%;
+    
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
 
     &__wrapper {
-        display: flex;
         justify-content: center;
+        background-color: g.$bone;
+        max-width: 70%;
     }
 
-    &__moore {
-        
-        
+    &__head {
+        font-size: large;
+        font-weight: bold;
+        stroke: g.$lightGray;
+        stroke-width: 100px;
+        padding: 30px;
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        gap: 90%;
+    }
+
+    &__input{
+        border-radius: g.$cornerRadiusStandard;
+        border-color: g.$lightGray;
+        font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+        margin-bottom: 2px;
+    }
+
+    &__column1{
+        grid-column: 1;
+    }
+
+    &__column2{
+        grid-column: 2;
+    }
+
+    &__column3{
+        grid-column: 3;
+    }
+
+
+    &__moore {  
         background-color: g.$bone;
         margin-top: 10px;
-        
-        &__head {
-            font-size: large;
-            font-weight: bold;
-            stroke: g.$lightGray;
-            stroke-width: 100px;
-            padding: 30px;
-        }
     }
 }
