--- a/src/scss/4-components/_table.scss
+++ b/src/scss/4-components/_table.scss
@@ -10,10 +10,26 @@
     border-radius: g.$cornerRadiusStandard;
     width: 90%;
     
-    display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    
-    
+
+    &__body{
+        display: flex;
+        flex-direction: column;
+        
+    }
+
+    &__column{
+        &1{
+            margin-right: 5rem;
+        }
+        &2{
+            margin-right: 5rem;
+        }
+        &3{
+            margin-right: 5rem;
+        }
+    }
+
     &__wrapper {
         display: flex;
         align-items: center;
@@ -36,7 +52,7 @@
         justify-self: center;
     }
 
-    &__input{
+    input{
         border-radius: g.$cornerRadiusStandard;
         border: 0.125rem solid g.$lightGray;
         height: 1.25rem;
@@ -48,26 +64,7 @@
         }
     }
 
-    &__column {
-
-        display: flex;
-        flex-direction: column;
-        padding-right: g.$standardPaddingX;
-        padding-left: g.$standardPaddingX;
-
-        &1{
-            grid-column: 1;
-        }
-
-        &2{
-            grid-column: 2;
-        }
-        
-        &3{
-            grid-column: 3;
-        }
-    }
-
+    
     &__moore {  
         background-color: g.$bone;
         margin-top: 10px;
