Add/remove rows bts working, colors for debugging

--- a/src/scss/4-components/_button.scss
+++ b/src/scss/4-components/_button.scss
@@ -31,6 +31,18 @@
         }
     }
 
+    &__danger{
+        &__unselected {
+            background-color: g.$lightGray;
+            color: g.$gray;
+        }
+        
+        &__selected {
+            background-color: g.$danger;
+            color: g.$black;
+        }
+    }
+
     &__transparent {
         background-color: #FFFFFF00;
         border-color: #00000022;
