--- a/src/scss/4-components/_table.scss
+++ b/src/scss/4-components/_table.scss
@@ -1,34 +1,65 @@
 @use "./../1-global" as g;
 
-.table {
+.table {   
+
+    margin-top: 1rem;
+
+    &__columns{
+    background-color: g.$tealBlue;
 
     padding-left: g.$standardPaddingX;
     padding-right: g.$standardPaddingX;
     padding-top: g.$standardPaddingY;
     padding-bottom: g.$standardPaddingY;
     
-    border-radius: g.$cornerRadiusStandard;
-    width: 90%;
-    
-    grid-template-columns: 1fr 1fr 1fr;
-
+    border-radius: g.$cornerRadiusStandard;    
     
 
-    &__wrapper {
-        display: grid;
-        background-color: g.$bone;
+    display: grid;
+    grid-template-rows: 30px;
+        &__header{
+            display: grid;
+            grid-template-columns: repeat(3, 1fr);
+            &1{
+                justify-self: center;
+                max-width: fit-content;
+                grid-column: 1;
+            }
+            
+            &2{
+                justify-self: center;
+                max-width: fit-content;
+                grid-column: 2;            
+            }
+
+            &3{
+                justify-self: center;
+                max-width: fit-content;                
+                grid-column: 3;
+            } 
+            
+        }
+    
+        &__input{
+            display: flex;
+            justify-content: space-around;
+            
+            &1{
+                align-self: center;
+                grid-column: 1;
+            }
+            
+            &2{
+                align-self: center;
+                grid-column: 2;            
+            }
+
+            &3{
+                align-self: center;
+                grid-column: 3;
+            } 
+        }
     }
-    
-
-    
-
-    
-    &__moore {  
-        background-color: g.$bone;
-        margin-top: 10px;
-    }
-
-
 }
 
 input{
@@ -36,62 +67,48 @@ input{
     border: 0.125rem solid g.$lightGray;
     height: 1.25rem;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    margin-bottom: 12px;
+    margin-bottom: 5px;
 
     &:focus {
         outline-color: g.$bone;
-    }
-}
-
-.columns{
-    display: grid;
-    &__header{
-        display: grid;
-        grid-template-columns: 1fr 1fr 1fr;
-        &1{
-            grid-column: 1;
-            background-color: yellow;
-        }
-        
-        &2{
-            grid-column: 2;
-            background-color: blue;
-        
-        }
-        &3{
-            grid-column: 3;
-            background-color: red;
-        
-        }
-    }
-
-    &__input{
-        display: grid;
-        grid-template-rows: 1fr 1fr 1fr;
-
-        &1{
-            grid-row: 1;
-            background-color: yellow;
-        }
-        
-        &2{
-            grid-row: 2;
-            background-color: blue;
-        
-        }
-        &3{
-            grid-row: 3;
-            background-color: red;
-        
-        }
-    }
-
-    
+    }    
 }
 
 #rowButtons{
     display: flex;
+    margin-top: 2rem;
     gap: 2rem;
     align-items: center;
     justify-content: center;
+}
+
+.output{
+
+    background-color: g.$tealBlue;
+    border-radius: g.$cornerRadiusStandard;
+
+    padding-left: g.$standardPaddingX;
+    padding-right: g.$standardPaddingX;
+    padding-top: g.$standardPaddingY;
+    padding-bottom: g.$standardPaddingY;
+    
+    border-radius: g.$cornerRadiusStandard;    
+
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+
+    &__column1{
+        grid-column: 1;
+        justify-self: center;
+    }
+
+    &__column2{
+        grid-column: 2;
+        justify-self: center;
+    }
+
+    &__column3{
+        grid-column: 3;
+        justify-self: center;
+    }
 }
